pil2-stark/lib/include/starks_lib.h

    void commit_stage(void *pStarks, uint32_t elementType, uint64_t step, void *buffer, void *pProof, void *pBuffHelper);
    
    void compute_lev(void *pStarks, void *xiChallenge, void* LEv);
    void compute_evals(void *pStarks, void *params, void *LEv, void *pProof);
    void calculate_hash(void *pStarks, void *pHhash, void *pBuffer, uint64_t nElements);
    // FRI 
    // =================================================================================

    void compute_fri_folding(uint64_t step, void *buffer, void *pChallenge, uint64_t nBitsExt, uint64_t prevBits, uint64_t currentBits);
    void compute_fri_merkelize(void *pStarks, void *pProof, uint64_t step, void *buffer, uint64_t currentBits, uint64_t nextBits);
    void compute_queries(void *pStarks, void *pProof, uint64_t *friQueries, uint64_t nQueries, uint64_t nTrees);
    void compute_fri_queries(void *pStarks, void *pProof, uint64_t *friQueries, uint64_t nQueries, uint64_t step, uint64_t currentBits);
    void set_fri_final_pol(void *pProof, void *buffer, uint64_t nBits);
    // Transcript
    // =================================================================================
    void *transcript_new(uint32_t elementType, uint64_t arity, bool custom);
    void transcript_add(void *pTranscript, void *pInput, uint64_t size);
    void transcript_add_polinomial(void *pTranscript, void *pPolinomial);
    void transcript_free(void *pTranscript, uint32_t elementType);
    void get_challenge(void *pStarks, void *pTranscript, void *pElement);
    void get_permutations(void *pTranscript, uint64_t *res, uint64_t n, uint64_t nBits);
    // Constraints
    // =================================================================================
    void *verify_constraints(void *pSetupCtx, void* stepsParams);
    // Global constraints
    // =================================================================================
    bool verify_global_constraints(void *globalBin, void *publics, void* challenges, void *proofValues, void **airgroupValues);
    void *get_hint_field_global_constraints(void *globalBin, void *publics, void* challenges, void *proofValues, void **airgroupValues, uint64_t hintId, char *hintFieldName, bool print_expression);
    uint64_t set_hint_field_global_constraints(void* p_globalinfo_bin, void *proofValues, void *values, uint64_t hintId, char *hintFieldName);
    
    // Debug functions
    // =================================================================================
    void print_row(void *pSetupCtx, void *buffer, uint64_t stage, uint64_t row);
    void print_expression(void *pSetupCtx, void* pol, uint64_t dim, uint64_t first_value, uint64_t last_value);
    // Recursive proof
    // =================================================================================
    void *gen_recursive_proof(void *pSetupCtx, char* globalInfoFile, uint64_t airgroupId, void* pAddress, void *pConstPols, void *pConstTree, void* pPublicInputs, char *proof_file, bool vadcop);
    void *get_zkin_ptr(char *zkin_file);
    void *add_recursive2_verkey(void *pZkin, char* recursive2VerKeyFilename);
    void *join_zkin_recursive2(char* globalInfoFile, uint64_t airgroupId, void* pPublics, void* pChallenges, void *zkin1, void *zkin2, void *starkInfoRecursive2);
    void *join_zkin_final(void* pPublics, void *pProofValues, void* pChallenges, char* globalInfoFile, void **zkinRecursive2, void **starkInfoRecursive2);
    char *get_serialized_proof(void *zkin, uint64_t* size);
    void *deserialize_zkin_proof(char* serialized_proof);
    void *get_zkin_proof(char* zkin);
    void zkin_proof_free(void *pZkinProof);
    void serialized_proof_free(char *zkinCStr);
    void get_committed_pols(void *pWitness, char* execFile, void *pAddress, void* pPublics, uint64_t sizeWitness, uint64_t N, uint64_t nPublics, uint64_t offsetCm1, uint64_t nCols);
    // Final proof
    // =================================================================================
    void gen_final_snark_proof(void *pWitnessFinal, char* zkeyFile, char* outputDir);
    // Util calls
    // =================================================================================
    void setLogLevel(uint64_t level);